2011-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-fstest.c (read_file): Report GRUB error if file opening
	failed.

2011-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/file.c (grub_file_open): Don't take into account the
	parenthesis in the middle of the filename.

2011-04-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/mips/linux.c (grub_cmd_initrd): Use correct limits
	rather than trying to put initrd way too high.
	Reported by: Ryan Lortie <desrt@desrt.ca>

2011-04-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/mips/yeeloong/fwstart.S (no_cs5536): Put back
	improperly removed string.

2011-04-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (grub_util_biosdisk_data): New member
	is_disk.
	(grub_util_biosdisk_open): Don't apply ioctl on non-disk devices.
	(open_device) Likewise.
	(grub_util_biosdisk_close): Likewise.
	Reported by: Mark Korenberger.

2011-04-10  Alexander Kurtz <kurtz.alex@googlemail.com>

	* util/grub-mkconfig_lib.in: Add missing quotes.

2011-04-10  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/gnulib/argp-parse.c (__argp_input): Don't crash if pstate
	is NULL.

2011-04-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Dynamically count the number of lines for the lower banner.

	* grub-core/normal/menu_entry.c (per_term_screen): New member
	num_entries.
	(print_down): Use num_entries.
	(update_screen): Likewise.
	(grub_menu_entry_run): Set num_entries.
	* grub-core/normal/menu_text.c (menu_viewer_data): New member
	num_entries.
	(grub_print_message_indented): Move real part to ...
	(grub_print_message_indented_real): ... here. Additional argument
	dry_run.
	(draw_border): Additional argument num_entries.
	(print_message): Additional argument dry_run.
	(print_entries): Receive menu viewer data.
	(grub_menu_init_page): New argment num_entries.
	(menu_text_set_chosen_entry): Use num_entries.
	(grub_menu_try_text): Likewise.